--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@kr0san89/ngx-graph",
-  "version": "12.0.0",
+  "name": "@vgt/ngx-graph",
+  "version": "0.0.0",
   "description": "Graph visualization for angular",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Kr0san89/ngx-graph.git"
-  },
+  "private": "false",
   "keywords": [
     "angular",
     "graph",
@@ -18,16 +15,7 @@
     "directed acyclic graph",
     "dag"
   ],
-  "author": "Swimlane",
-  "maintainers": [
-    "Marjan Georgiev",
-    "Assaf Shemesh"
-  ],
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Kr0san89/ngx-graph/issues"
-  },
-  "homepage": "https://github.com/Kr0san89/ngx-graph#readme",
   "peerDependencies": {
     "@angular/animations": ">=19.0.0",
     "@angular/common": ">=19.0.0",
